# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2025 The Contributors to Eclipse OpenSOVD (see CONTRIBUTORS)
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0

[package]
name = "integration-tests"
version = "0.1.0"
edition.workspace = true
publish = false
description = "Integration tests for the whole Classic Diagnostic Adapter (CDA) system"
homepage.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
# internal dependencies
cda-interfaces = { workspace = true }
cda-core = { workspace = true }
cda-database = { workspace = true }
cda-sovd = { workspace = true }
sovd-interfaces = { workspace = true }
cda-tracing = { workspace = true }
cda-plugin-security = { workspace = true }
cda-comm-doip = { workspace = true }
cda-health = { workspace = true }
opensovd_cda_lib = { workspace = true, features = ["integration-tests"] }

# External dependencies
# tokio
tokio = { workspace = true, features = ["rt", "sync", "io-util", "time"] }
# serde
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_qs = { workspace = true, features = ["axum"] }
# http
aide = { workspace = true, features = ["axum"] }
axum = { workspace = true }
reqwest = { workspace = true }
http = { workspace = true }
mime = { workspace = true }
schemars = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
# logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
  "ansi",
  "chrono",
  "env-filter",
  "fmt",
  "json",
  "parking_lot",
  "std",
] }
# error
thiserror = { workspace = true }
# toml serialization
toml = { workspace = true }
# time
chrono = { workspace = true }
# future
futures = { workspace = true }
# libc
libc = { workspace = true }

# compile time format
const_format = { workspace = true }

[build-dependencies]
cda-build = { workspace = true }

[features]
# We need the health endpoint to check if the CDA is online
default = ["opensovd_cda_lib/health"]
integration-tests = []
functional-locks-tests = []

# Integration tests are only compiled when the feature is enabled.
[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"
required-features = ["integration-tests"]
