[package]
name = "diag-converter"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "diag-converter"
path = "src/main.rs"

[dependencies]
mdd-format = { workspace = true }
diag-ir = { workspace = true }
diag-yaml = { workspace = true }
diag-odx = { workspace = true }
serde_yaml = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
rayon = { workspace = true }
