load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "diag_ir",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "diag_ir",
    visibility = ["//visibility:public"],
    deps = [
        "//mdd-format:mdd_format",
        "@crates//:flatbuffers",
        "@crates//:log",
        "@crates//:serde",
        "@crates//:thiserror",
    ],
)

rust_test(
    name = "diag_ir_test",
    crate = ":diag_ir",
)

# Integration tests
[rust_test(
    name = test_file.replace("tests/", "").replace(".rs", ""),
    srcs = [test_file],
    compile_data = ["//test-fixtures:test_fixtures"],
    data = ["//test-fixtures:test_fixtures"],
    rustc_env = {"CARGO_MANIFEST_DIR": "diag-ir"},
    deps = [
        ":diag_ir",
        "//mdd-format:mdd_format",
        "@crates//:flatbuffers",
        "@crates//:pretty_assertions",
    ],
) for test_file in glob(["tests/*.rs"])]
