[package]
name = "diag-ir"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
mdd-format = { workspace = true }
flatbuffers = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
