[package]
name = "mdd-format"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
test-utils = []

[lints]
workspace = true

[dependencies]
flatbuffers = { workspace = true }
prost = { workspace = true }
xz2 = { workspace = true }
flate2 = { workspace = true }
zstd = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

[build-dependencies]
prost-build = "0.13"
cargo_toml = "0.22"

[dev-dependencies]
mdd-format = { path = ".", features = ["test-utils"] }
pretty_assertions = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
